--- a/slide/index.html
+++ b/slide/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="Description" content="嘉讲堂邀请函">
+  <meta name="Description" content="test">
   <link rel="stylesheet" type="text/css" href="./style/invite.css">
   <title>嘉讲堂邀请函</title>
 </head>
