--- a/rwfx/index.html
+++ b/rwfx/index.html
@@ -398,11 +398,9 @@
             </div></section> -->
             <section class="sec08 " style="width: 509px; height: 953px;">
                 <div class="p">
-<!--                     <p class="f20">解析性格　　<span class="hl">"嘉"</span>倍人生精彩</p>
-                    <p>和乐嘉老师一起进入他的《嘉讲堂》</p>
- -->                    <p>时光飞逝</p>
-                        <p><span class="hl">四届一任</span>将接过接力棒</p1>
-                          <p>为创造更好的团委学生会而努力</p>
+                    <p>时光飞逝</p>
+                    <p><span class="hl">四届一任</span>将接过接力棒</p1>
+                    <p>为创造更好的团委学生会而努力</p>
                 </div>
                 <div class="door"><span></span></div>
                 <div class="layer" data-depth="1" style="-webkit-transform: translate3d(-1.1295447638603693%, 1.445708290726861%, 0px); -webkit-backface-visibility: hidden; position: absolute; display: block; height: 100%; width: 100%; left: 0px; top: 0px;"><span class="ico_tri09"></span></div>
@@ -410,6 +408,10 @@
                 <div class="layer" data-depth="0.8" style="-webkit-transform: translate3d(-0.9036358110882955%, 1.156566632581489%, 0px); -webkit-backface-visibility: hidden; position: absolute; display: block; height: 100%; width: 100%; left: 0px; top: 0px;"><span class="ico_tri10"></span></div>
                 <div class="layer" data-depth="1.3" style="-webkit-transform: translate3d(-1.46840819301848%, 1.8794207779449195%, 0px); -webkit-backface-visibility: hidden; position: absolute; display: block; height: 100%; width: 100%; left: 0px; top: 0px;"><span class="ico_tri11"></span></div>
                 <!-- <span class="start"><b><img src="./img/arrow.png"></b></span> -->
+                <div id="bottom">
+                  <p>时间：2014年5月25日 9:00AM</p>
+                  <p>地点：华山学生活动中心</p>
+                </div>
             </section>
             
         </div>
